add bind option to rserver